[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bit-set = "0.5.3"
bit-vec = "0.6.3"
byteorder = { version = "1.5.0", features = ["i128"] }
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.1.0"
counter = "0.5.7"
euclid = "0.22.9"
itertools = "0.12.0"
ndarray = "0.15.6"
nom = "7.1.3"
num = "0.4.1"
pathfinding = "4.6.0"
petgraph = "0.6.4"
primal = "0.3.2"
rand = "0.8.5"
regex = "1.10.2"
rhai = "1.16.3"
serde = "1.0.185"
serde_json = "1.0.108"
