[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
bit-set = "*"
bit-vec = "*"
byteorder = { version = "*", features = ["i128"] }
clap = { version = "*", features = ["derive"] }
chrono = "*"
colored = "*"
counter = "*"
euclid = "*"
fixedbitset = "*"
itertools = "*"
memoize = "*"
nalgebra = "*"
ndarray = "0.15.2"
ndarray-linalg = { version = "*", features = ["openblas-static"] }
nom = "*"
num = "*"
pathfinding = "*"
petgraph = "*"
primal = "*"
rand = "*"
regex = "*"
rhai = "*"
rustworkx-core = "*"
serde = "*"
serde_json = "*"
